# minimote-server

./: .gitignore  CMakeLists.txt  README.md  main.c  minimote_controller.c  minimote_controller.h  minimote_packet.c  minimote_packet.h  minimote_packet_type.c  minimote_packet_type.h  minimote_server.c  minimote_server.h  minimote_utils.c  minimote_utils.h  minimote_x11.c  minimote_x11.h
cmake/: FindWAYLAND_CLIENT.cmake  FindXCB.cmake  FindXKBCOMMON.cmake  FindXKBCOMMON_X11.cmake
src/: conf.h  main.c
src/adt/hash/: hash.c  hash.h
src/adt/hash/node/: hash_node.c  hash_node.h
src/adt/list/: list.c  list.h
src/adt/list/node/: list_node.c  list_node.h
src/args/: args.c  args.h
src/arguments/: arguments.c  arguments.h
src/buffer/: rolling_buffer.c  rolling_buffer.h
src/client/: minimote_client.c  minimote_client.h
src/commons/: globals.h  types.h
src/commons/conf/: conf.h
src/commons/containers/hash/: hash.c  hash.h  hash_node.c  hash_node.h
src/commons/containers/list/: list.c  list.h  list_node.c  list_node.h
src/commons/utils/: array_utils.h  byte_utils.c  byte_utils.h  io_utils.c  io_utils.h  linux_utils.c  linux_utils.h  net_utils.c  net_utils.h  str_utils.c  str_utils.h  time_utils.c  time_utils.h  typing_utils.c  typing_utils.h  xkb_utils.c  xkb_utils.h
src/controller/: minimote_controller.c  minimote_controller.h
src/display/: minimote_display.c  minimote_display.h
src/keys/: minimote_key_type.c  minimote_key_type.h
src/log/: log.c  log.h
src/logging/: logging.h
src/minimote/client/: minimote_client.c  minimote_client.h
src/minimote/controller/: minimote_controller.c  minimote_controller.h
src/minimote/keys/: minimote_key_type.h  minimote_key_type_x11_map.c  minimote_key_type_x11_map.h
src/minimote/packet/: minimote_packet.c  minimote_packet.h
src/minimote/packet/type/: minimote_packet_type.c  minimote_packet_type.h
src/minimote/server/: minimote_server.c  minimote_server.h
src/minimote/special_keys/keymap/: minimote_special_keymap.c  minimote_special_keymap.h
src/minimote/special_keys/type/: minimote_special_key_type.h
src/minimote/x11/: minimote_x11.c  minimote_x11.h
src/net/: ring_buffer.c  ring_buffer.h
src/packet/: minimote_packet.c  minimote_packet.h  minimote_packet_type.c  minimote_packet_type.h
src/server/: minimote_server.c  minimote_server.h
src/test/: test.c  test.h
tmp/: main.c.bck
